# Weave

./: .gitignore  Cargo.toml  README.md  build-installer.bat  index.html  instalator.bat  package.json  playwright.config.ts  pnpm-lock.yaml  run-dev-mac.sh  run-dev-vulkan.bat  run-dev.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.sqlx/: query-0537409e0c4eef55b1a8b3de35659778f588ebb074fc2b83cce9a111e08ad52e.json  query-0f4d77badde5bc783ad0f4df8038a2de158a5c45c784d7b1efd1cb497c7955f8.json  query-11799578fd7588010d6e30248cd1de97febc85cd8a574729a9d5a7ba0251496a.json  query-1a2f2d2e47d1fb8e37a3cba723093a56c45f3ce286496add0c694ece48286b45.json  query-1b247cc2bc61751e60589ce74ee0bc25274ef2d433fe5359f6683caab1858180.json  query-1d129b6daf5326695c5aecf092d1f55c96cd431e7bd1eb69ace4de72e393d772.json  query-285f31dd7353afeb6255def1b63c43ff22eb5eecc3fa65a8a4b5391275d0b646.json  query-395cdac22b4458303e76d0b7e738ef2607898099ba97cd930b6cab7e95c0cc3c.json  query-43d7f870402fd70cb147fe993fc9d80609a32e9d1aa66317cf17ac943bbc62f1.json  query-4c4627d6585333c235349e82e9f7b4e4de1afebe5fd0242c2c493263b23017f8.json  query-5a54b7c8d884412edb14da101a9ee28c81fc11fa26bc8a71329424fdf09451e7.json  query-5afef7086c9a187d14263c9c14cd75beaa0d14f4a593c7b4c786d0c19d8b7d29.json  query-642531d7562871d052f3ed87ea19073bda7e71b3b620c43354034e6e9335a87e.json  query-85ed60ebc54b8bfe6c9376a24561af35dede66f22c9cd8d35839f18b87b9dd32.json  query-8d5b63cee3b1873e952a1b22d8feaf8d09c7d51a76a1928bbe1885b2d253a0d0.json  query-90d64ce43eb6191df15727d82a10a072bd263b355323060b36ecc2d999861ac2.json  query-bb03accbf39087bbb9bcf1b2bd100dc7bec54bf7c5529739c21fa75acb457104.json  query-cb10da0c3eba333569286ea51dbcf0c442b20c962beec65a3b1aa5e601e097cd.json  query-cf2e1869eff1508dc4657202e552f0d41d2d439c6ee05ea3b171a08b496ae2b6.json  query-f710089353a530cfd905f1b253f5306ede6681fa7deda71e180d6e502c19cf1f.json
.storybook/: main.ts  preview.ts
docs/: RELEASING.md
e2e/: settings.spec.ts  wizard.spec.ts  workspace.spec.ts
src/: App.svelte  app.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/weave-application/: Cargo.toml
src-tauri/crates/weave-application/src/: error.rs  lib.rs  reply_cleaner.rs
src-tauri/crates/weave-application/src/ports/: attachment_store_port.rs  comfy_installer_port.rs  conversation_repository.rs  generation_settings_repository.rs  image_gen_port.rs  keychain_port.rs  llm_port.rs  lora_catalog_port.rs  mod.rs  model_catalog_port.rs  model_manager_port.rs  pdf_exporter.rs  persona_repository.rs  subject_repository.rs  workspace_port.rs
src-tauri/crates/weave-application/src/use_cases/: auto_title.rs  compact_conversation.rs  create_conversation.rs  export_conversation.rs  generate_image.rs  manage_api_keys.rs  mod.rs  personas.rs  send_message.rs  workspace.rs
src-tauri/crates/weave-domain/: Cargo.toml
src-tauri/crates/weave-domain/src/: conversation.rs  error.rs  generation_settings.rs  lib.rs  message.rs  model.rs  persona.rs  recommended_models.rs  subject.rs  workspace.rs
src-tauri/crates/weave-infrastructure/: Cargo.toml
src-tauri/crates/weave-infrastructure/migrations/: 001_initial.sql  002_workspace.sql  003_settings.sql  004_personas.sql  005_conversation_settings.sql  006_subjects.sql  007_image_fidelity_settings.sql  008_conversation_runtime_backend.sql  009_image_checkpoint.sql  010_image_lora.sql
src-tauri/crates/weave-infrastructure/src/: attachment_store.rs  backup.rs  civitai.rs  hf_catalog.rs  image_stamp.rs  keychain.rs  lib.rs  logs.rs  model_manager.rs  parallel_download.rs  spawn.rs
src-tauri/crates/weave-infrastructure/src/comfy_installer/: mod.rs  process.rs
src-tauri/crates/weave-infrastructure/src/comfyui/: mod.rs
src-tauri/crates/weave-infrastructure/src/db/: app_config.rs  conversation_repo.rs  generation_settings_repo.rs  message_repo.rs  mod.rs  persona_repo.rs  subject_repo.rs  workspace_config.rs
src-tauri/crates/weave-infrastructure/src/llm/: embedded.rs  local_client.rs  mistral_client.rs  mod.rs
src-tauri/crates/weave-infrastructure/src/pdf/: mod.rs
src-tauri/crates/weave-infrastructure/src/workspace/: fs_adapter.rs  mod.rs  watcher.rs  workspace_repo.rs
src-tauri/crates/weave-infrastructure/tests/: comfy_install_smoke.rs  embedded_gpu_smoke.rs  keychain_smoke.rs
src-tauri/crates/weave-shell/: Cargo.toml
src-tauri/crates/weave-shell/src/: lib.rs  state.rs
src-tauri/crates/weave-shell/src/commands/: backup.rs  catalog.rs  civitai.rs  comfy_installer.rs  conversation.rs  gallery.rs  logs.rs  message.rs  mod.rs  models.rs  openvino_installer.rs  personas.rs  settings.rs  subjects.rs  workspace.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/features/chat/: ChatView.svelte  ContextMeter.svelte  EmptyState.svelte  ExportMenu.svelte  MainLayout.svelte  MessageBubble.stories.ts  MessageBubble.svelte  PersonaPicker.svelte  Sidebar.svelte
src/features/gallery/: GalleryDetailWindow.svelte  GalleryWindow.svelte
src/features/settings/: LogViewer.svelte  LogWindow.svelte  Settings.svelte
src/features/subjects/: SubjectsWindow.svelte
src/features/wizard/: Wizard.svelte
src/features/workspace/: FileEditor.svelte  FileTree.svelte  FileTreeNode.svelte  WorkspacePanel.svelte  WorkspaceSearch.svelte
src/lib/: context-tokens.ts  generated-images.ts  markdown.ts  mentions.ts  reference-images.ts  token-urls.ts
src/lib/__tests__/: context-tokens.test.ts  generated-images.test.ts  markdown.test.ts  mentions.test.ts  reference-images.test.ts
src/lib/i18n/: index.svelte.ts
src/lib/services/: chat.service.ts  notify.ts  tts.svelte.ts
src/lib/stores/: civitai-browser.svelte.ts  comfy-install.svelte.ts  conversations.svelte.ts  edit-image.svelte.ts  generation-settings.svelte.ts  logs.svelte.ts  model-search.svelte.ts  models.svelte.ts  openvino-install.svelte.ts  personas.svelte.ts  reference-queue.svelte.ts  settings.svelte.ts  subjects.svelte.ts  updater.svelte.ts  vram.svelte.ts  workspace.svelte.ts
(+26 files in other folders)
