[workspace]
resolver = "2"
members = [
    "src-tauri",
    "src-tauri/crates/weave-domain",
    "src-tauri/crates/weave-application",
    "src-tauri/crates/weave-infrastructure",
    "src-tauri/crates/weave-shell",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Weave Contributors"]
license = "MIT"
rust-version = "1.87"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Mocking (dev/test)
mockall = "0.13"
wiremock = "0.6"

[profile.dev]
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
