[package]
name = "weave-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Weave — Tauri kompoziční kořen a entry point"

[lib]
name = "weave_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Vestavěná GPU inference (llama.cpp). Zapíná se při buildu:
#   cargo tauri dev --features llm-cuda   (viz run-dev.bat)
llm-cuda = ["weave-shell/llm-cuda"]
llm-metal = ["weave-shell/llm-metal"]
llm-vulkan = ["weave-shell/llm-vulkan"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
weave-shell = { path = "crates/weave-shell" }

tauri = { workspace = true, features = ["tray-icon", "protocol-asset"] }
serde_json = { workspace = true }
tauri-plugin-stronghold = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }
