[package]
name = "weave-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Weave infrastructure layer — SQLite, keychain, HTTP adaptery pro LLM a ComfyUI."

[features]
# Vestavěná inference přes llama.cpp (llama-cpp-2). CPU základ + GPU akcelerace
# přes feature flagy. NEbuildí se v CI (potřebuje CMake/CUDA toolchain).
llm-embedded = ["dep:llama-cpp-2", "dep:encoding_rs"]
llm-cuda = ["llm-embedded", "llama-cpp-2/cuda"]
llm-metal = ["llm-embedded", "llama-cpp-2/metal"]
llm-vulkan = ["llm-embedded", "llama-cpp-2/vulkan"]

[dependencies]
weave-domain = { path = "../weave-domain" }
weave-application = { path = "../weave-application" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
sqlx = { workspace = true }
keyring = "4"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
genpdf = "0.2"
llama-cpp-2 = { version = "0.1.150", optional = true, default-features = false, features = [
    "sampler",
] }
encoding_rs = { version = "0.8", optional = true }
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
png = { workspace = true }
tokio-tungstenite = "0.29"

[dev-dependencies]
wiremock = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { workspace = true }
