[package]
name = "weave-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Weave shell — Tauri entry point a commands."

[features]
llm-embedded = ["weave-infrastructure/llm-embedded"]
llm-cuda = ["weave-infrastructure/llm-cuda", "llm-embedded"]
llm-metal = ["weave-infrastructure/llm-metal", "llm-embedded"]
llm-vulkan = ["weave-infrastructure/llm-vulkan", "llm-embedded"]

[dependencies]
weave-domain = { path = "../weave-domain" }
weave-application = { path = "../weave-application" }
weave-infrastructure = { path = "../weave-infrastructure" }

tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
